added encoder memory

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -175,25 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "00001010010101001000000000000000\n",
       "a\n",
       "00001010000000001000000000000000\n",
       "yes\n",
+      "10001010010101001000000000000000\n",
       "b\n",
       "00000010010001000000000000000000\n",
       "yes\n",
+      "11001010010101001000000000000000\n",
       "c\n",
       "00001010000101000000000000000000\n",
       "no\n",
+      "11001010010101001000000000000000\n",
       "d\n",
       "00000000010101000000000000000000\n",
       "yes\n",
+      "11001011010101001000000000000000\n",
       "e\n",
       "00000000000000001000000000000000\n",
       "yes\n"
@@ -202,15 +207,17 @@
    ],
    "source": [
     "k = num_parity(m)\n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
     "if k >=1:\n",
     "    print(\"a\")\n",
     "    print(bin(message_with_parity & p1_int).replace(\"0b\",\"\").zfill(32))\n",
     "    if isParity(bin(message_with_parity & p1_int).replace(\"0b\",\"\").zfill(32)):\n",
     "        message_with_parity = message_with_parity | parity_1_value\n",
-    "        \n",
     "        print(\"yes\")\n",
     "    else:\n",
     "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
     "if k >= 2:\n",
     "    print(\"b\")\n",
     "    print(bin(message_with_parity & p2_int).replace(\"0b\",\"\").zfill(32))\n",
@@ -219,6 +226,8 @@
     "        print(\"yes\")\n",
     "    else:\n",
     "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
     "if k >= 3:\n",
     "    print(\"c\")\n",
     "    print(bin(message_with_parity & p3_int).replace(\"0b\",\"\").zfill(32))\n",
@@ -227,6 +236,8 @@
     "        print(\"yes\")\n",
     "    else:\n",
     "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
     "if k >= 4:\n",
     "    print(\"d\")\n",
     "    print(bin(message_with_parity & p4_int).replace(\"0b\",\"\").zfill(32))\n",
@@ -236,6 +247,7 @@
     "    else:\n",
     "        print(\"no\")\n",
     "\n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
     "if k >= 5:\n",
     "    print(\"e\")\n",
     "    print(bin(message_with_parity & p5_int).replace(\"0b\",\"\").zfill(32))\n",
