--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -291,6 +291,24 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "###decoder\n",
+    "p1 = '10101010101010101010101010101010'\n",
+    "p2 = '01100110011001100110011001100110'\n",
+    "p3 = '00011110000111100001111000011110'\n",
+    "p4 = '00000001111111100000000111111110'\n",
+    "p5 = '00000000000000011111111111111110' \n",
+    "\n",
+    "k = num_parity(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
@@ -301,6 +319,147 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "message = '010101010101'\n",
+    "m = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def num_parity(m):\n",
+    "    if m == 1:\n",
+    "        return 2\n",
+    "    elif 2 <= m <= 4:\n",
+    "        return 3\n",
+    "    elif 5 <= m <= 11:\n",
+    "        return 4\n",
+    "    elif 12 <= m <= 27:\n",
+    "        return 5\n",
+    "    else:\n",
+    "        return -1\n",
+    "    \n",
+    "    \n",
+    "p1 = '10101010101010101010101010101010'\n",
+    "p2 = '01100110011001100110011001100110'\n",
+    "p3 = '00011110000111100001111000011110'\n",
+    "p4 = '00000001111111100000000111111110'\n",
+    "p5 = '00000000000000011111111111111110' \n",
+    "\n",
+    "p1_int = int(p1, 2)\n",
+    "p2_int = int(p2, 2)\n",
+    "p3_int = int(p3, 2)\n",
+    "p4_int = int(p4, 2)\n",
+    "p5_int = int(p5, 2)\n",
+    "\n",
+    "message = bin(int(message,2) << (32-12))\n",
+    "and_1   = '10000000000000000000000000000000'\n",
+    "and_2   = '01110000000000000000000000000000'\n",
+    "and_3   = '00001111111000000000000000000000'\n",
+    "and_4   = '00000000000111111111111111111111'\n",
+    "\n",
+    "shift_1 = (int(and_1,2) & int(message,2)) >> 2\n",
+    "shift_2 = (int(and_2,2) & int(message,2)) >> 3\n",
+    "shift_3 = (int(and_3,2) & int(message,2)) >> 4\n",
+    "shift_4 = (int(and_4,2) & int(message,2)) >> 5\n",
+    "\n",
+    "message_with_parity = shift_1 | shift_2 | shift_3 | shift_4\n",
+    "\n",
+    "def isParity(b):\n",
+    "    count = 0 \n",
+    "    for c in b:\n",
+    "        if c == '1':\n",
+    "            count += 1\n",
+    "    return count % 2 == 1\n",
+    "\n",
+    "parity_1_value = 2**31\n",
+    "parity_2_value = 2**30\n",
+    "parity_3_value = 2**28\n",
+    "parity_4_value = 2**24\n",
+    "parity_5_value = 2**16\n",
+    "\n",
+    "k = num_parity(m)\n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
+    "if k >=1:\n",
+    "    print(\"a\")\n",
+    "    print(bin(message_with_parity & p1_int).replace(\"0b\",\"\").zfill(32))\n",
+    "    if isParity(bin(message_with_parity & p1_int).replace(\"0b\",\"\").zfill(32)):\n",
+    "        message_with_parity = message_with_parity | parity_1_value\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
+    "if k >= 2:\n",
+    "    print(\"b\")\n",
+    "    print(bin(message_with_parity & p2_int).replace(\"0b\",\"\").zfill(32))\n",
+    "    if isParity(bin(message_with_parity & p2_int).replace(\"0b\",\"\").zfill(32)):\n",
+    "        message_with_parity = message_with_parity | parity_2_value\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
+    "if k >= 3:\n",
+    "    print(\"c\")\n",
+    "    print(bin(message_with_parity & p3_int).replace(\"0b\",\"\").zfill(32))\n",
+    "    if isParity(bin(message_with_parity & p3_int).replace(\"0b\",\"\").zfill(32)):\n",
+    "        message_with_parity = message_with_parity | parity_3_value\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n",
+    "        \n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
+    "if k >= 4:\n",
+    "    print(\"d\")\n",
+    "    print(bin(message_with_parity & p4_int).replace(\"0b\",\"\").zfill(32))\n",
+    "    if isParity(bin(message_with_parity & p4_int).replace(\"0b\",\"\").zfill(32)):\n",
+    "        message_with_parity = message_with_parity | parity_4_value\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n",
+    "\n",
+    "print(bin(message_with_parity).replace(\"0b\",\"\").zfill(32))\n",
+    "if k >= 5:\n",
+    "    print(\"e\")\n",
+    "    print(bin(message_with_parity & p5_int).replace(\"0b\",\"\").zfill(32))\n",
+    "    if isParity(bin(message_with_parity & p5_int).replace(\"0b\",\"\").zfill(32)):\n",
+    "        message_with_parity = message_with_parity | parity_5_value\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")"
+   ]
   }
  ],
  "metadata": {
